--- a/intro.html
+++ b/intro.html
@@ -9,17 +9,33 @@
     <h1>Personal Information</h1>
         <ul>
             <li>Name: Jharawell Bravo</li>
+            <li>Birthdate: April 27,2004
             <li>Age: 19</li>
             <li>Address: Giraltar, Baguio City</li>
+            <li>Mobile Number: 09386415021</li>
             <li>Email: rusbravo27@gmail.com</li>
         </ul>
 
     <h1>Educational Background</h1>
     <ul>
-        <li>Elementary: Rizal Elementary School</li>
-        <li>Junior High School: Rizal National High School</li>
-        <li>Senior High School: University of Baguio</li>
-        <li>College: University of the Cordilleras</li>
+        <li>Primary: Rizal Elementary School</li>
+        <li>Secondary: Rizal National High School and University of Baguio</li>
+        <li>Tertiary: University of the Cordilleras</li>
+    </ul>
+    <h1>Skills</h1>
+    <ul>
+        <li>Miscrosoft Word - Medium</li>
+        <li>Microsoft Excel - Beginner</li>
+        <li>Canva - Medium</li>
+        <li></li>
+    </ul>
+    <h1>Trainings Attended</h1>
+    <ul>
+        <li></li>
+    <h1>Interests</h1>
+        <ul>
+            <li></li>
+        </ul>
     </ul>
 </body>
 </html>
