--- a/intro.html
+++ b/intro.html
@@ -3,39 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Intro</title>
+    <title>Hello</title>
 </head>
 <body>
-    <h1>Personal Information</h1>
-        <ul>
-            <li>Name: Jharawell Bravo</li>
-            <li>Birthdate: April 27,2004
-            <li>Age: 19</li>
-            <li>Address: Giraltar, Baguio City</li>
-            <li>Mobile Number: 09386415021</li>
-            <li>Email: rusbravo27@gmail.com</li>
-        </ul>
+    <h1>Personal Details</h1>
 
-    <h1>Educational Background</h1>
     <ul>
-        <li>Primary: Rizal Elementary School</li>
-        <li>Secondary: Rizal National High School and University of Baguio</li>
-        <li>Tertiary: University of the Cordilleras</li>
-    </ul>
-    <h1>Skills</h1>
-    <ul>
-        <li>Miscrosoft Word - Medium</li>
-        <li>Microsoft Excel - Beginner</li>
-        <li>Canva - Medium</li>
-        <li></li>
-    </ul>
-    <h1>Trainings Attended</h1>
-    <ul>
-        <li></li>
-    <h1>Interests</h1>
-        <ul>
-            <li></li>
-        </ul>
+        <li>Name: Jharawell Bravo</li>
+        <li>Age: 19</li>
+        <li>Address: Gibraltar, Baguio City</li>
+        <li>Birthdate: April 27,2004</li>
     </ul>
 </body>
 </html>
