--- a/Resume.html
+++ b/Resume.html
@@ -7,15 +7,15 @@
 </head>
 <body>
     <img style= "border-radius:50%"; height="200px" src="profile.jpg" alt="">
-    <h1>Personal Details</h1>
+    <h1>Personal Information</h1>
 
     <ul>
         <li>Name: Jharawell Rus S. Bravo</li>
-        <li>Address: Gibraltar, Baguio City</li>
+        <li>Address: #52 Purok 2 Gibraltar Rd. Baguio City</li>
     </ul>
     <ul>
         <h3><i>Contact Information</i></h3>
-        <li style="margin-left: 30px;">Mobile Number: 0938645021</li>
+        <li style="margin-left: 30px;">Mobile No.: 0938645021</li>
         <li style="margin-left: 30px;">Email: rusbravo27@gmail.com</li>
     </ul>
     <h1>Educational Background</h1>
@@ -26,7 +26,7 @@
     </ul>
     <h1>Skills</h1>
     <ul>
-        <li>Microsoft Word - Advance</li>
+        <li>Microsoft Word - Medium</li>
         <li>Microsoft Excel - Beginner</li>
         <li>Canva - Medium</li>
     </ul>
@@ -38,9 +38,10 @@
     </ul>   
     <h1>Interests</h1>   
     <ul>
-        <li>Designing</li>
         <li>Watching Dramas</li>
         <li>Swimming</li>
+        <li>Listening to Music</li>
+        
         
     </ul>
 </body>
