--- a/Home.html
+++ b/Home.html
@@ -3,11 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Home</title>
+    <title>Document</title>
 </head>
 <body>
-    <H1>welcome</H1>
-    <a href="About Us.html">Go to About Us</a>
-    <a href="Contact.html">Go to Contacts</a>
+    <h1>Home</h1>
+    <a href="About Us.html"></a>
+    <a href="Contact.html"></a>
 </body>
 </html>
