--- a/HTML_Act.html
+++ b/HTML_Act.html
@@ -7,6 +7,14 @@
     <title>HTML Page</title>
 </head>
 <body>
-    
+    <div class="container">
+        <div class="row" style="text-indent:80%; font-size:25px; padding:15px; text-decoration:none;font-family: Georgia; word-spacing:30px;">
+            <a href="Home.html">Home</a>
+            <a href="AboutUs.html">AboutUs</a>
+            <a href="Contact.html">Contact</a>
+    </div>
+    <div>
+        <img src="hello.jpg" alt="">
+    </div>
 </body>
 </html>
