--- a/HTML_Act.html
+++ b/HTML_Act.html
@@ -31,8 +31,8 @@
                 <input type="radio" id="mgender" name="mgender">
                 <label for="mgender">Male</label><br>
                 <input type="radio" id="mfgender" name="mfgender">
-                <label for="mfgender">Female</label>
-                
+                <label for="mfgender">Female</label><br>
+                <input type="submit" value="Submit">
             </form>
         </div>
     </div>
