--- a/HTML_Act.html
+++ b/HTML_Act.html
@@ -15,7 +15,7 @@
         </div>
         <div class="row-fluid" style="margin-left: 380px;">
             <div class="col">
-                <img src="bear.jpg" style="margin:0%; height:200px; width: 300px;>
+                <img src="bear.jpg" style="margin:0%; height:200px; width: 300px;">
             </div>
             <div class="col">
                 <img src="hello.jpg">
@@ -35,8 +35,18 @@
                 <input type="submit" value="Submit">
             </form>
         </div>
+        <div class="row-fluid" >
+            <table>
+                <tr>
+                    <th>Name</th>
+                    <th>Age</th>
+                    <th>City</th>
+                </tr>
+            </table>
+        </div>
     </div>
     
+
     
 </body>
 </html>
