--- a/HTML_Act.html
+++ b/HTML_Act.html
@@ -45,6 +45,15 @@
                     <source src="RIIZE 라이즈 'Love 119' MV.mp4" type="video/ogg">
                 </video>
             </div>
+    
+        </div>
+        <div>
+            <article style="position: relative; bottom:30px; left:200px">
+                <h2>RIIZE</h2>
+                <p>Riize is a South Korean boy band formed by SM Entertainment.
+                    The group consists of seven members:
+                    Shotaro, Eunseok, Sungchan, Wonbin, Seunghan, Sohee, and Anton.<br>Check out their latest single "Love 119" above</p>
+            </article>
         </div>
         <div style="margin-top:10%; font-size:20px;">
             <form action="">
