--- a/HTML_Act.html
+++ b/HTML_Act.html
@@ -12,7 +12,7 @@
         }
 
         body{
-            background-color: rgb(147, 210, 189);
+           background-color: rgb(179, 175, 175);
         }
 
         a{
@@ -31,28 +31,29 @@
     <div class="container">
         <header>
         <div class="row" style="text-indent:75%; font-size:30px; padding:15px; text-decoration:none;font-family:impact; word-spacing:30px;">
+           <nav>
             <a href="Home.html">Home</a>
             <a href="AboutUs.html">AboutUs</a>
             <a href="Contact.html">Contact</a>
+           </nav>
         </div>
         </header>
         <div class="row-fluid" style="margin-left:330px;">
             <div>
-                <img src="welcome.jpg" style="width: 700px; height: 200px; margin:5%;" alt="">
+                <img src="welcome.jpg" style="width: 700px; height: 200px; margin:5%;" alt="welcome">
             </div>
             <div>
-                <video width="600px" controls style="position: relative; bottom:40px; left: 105px;">
+                <video width="600px" controls style="position: relative; bottom:40px; left: 100px;">
                     <source src="RIIZE 라이즈 'Love 119' MV.mp4" type="video/ogg">
                 </video>
             </div>
-    
         </div>
         <div>
             <article style="position: relative; bottom:30px; left:200px">
                 <h2>RIIZE</h2>
                 <p>Riize is a South Korean boy band formed by SM Entertainment.
                     The group consists of seven members:
-                    Shotaro, Eunseok, Sungchan, Wonbin, Seunghan, Sohee, and Anton.<br>Check out their latest single "Love 119" above</p>
+                    Shotaro, Eunseok, Sungchan, Wonbin, Seunghan, Sohee, and Anton.<br>Check out their latest single "Love 119" above.</p>
             </article>
         </div>
         <div style="margin-top:10%; font-size:20px;">
@@ -87,6 +88,10 @@
               </table>
     </div>
 
+    <div>
+        <h3>This is Sm Entertainment location</h3>
+        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3163.4521097973698!2d127.04377919999999!3d37.54441070000001!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x357ca46e21c25855%3A0xb969fc2b68758946!2sSM%20ENTERTAINMENT!5e0!3m2!1sen!2sph!4v1706694598237!5m2!1sen!2sph" width="300" height="150" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+    </div>
     <footer>
     <audio controls>
         <source src="Taylor Swift - Hey Stephen (Taylor's Version) (Lyric Video).mp3" type="audio/mpeg">
