--- a/AboutUs.html
+++ b/AboutUs.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Contact</title>
+    <title>Document</title>
 </head>
 <style>
     body{
@@ -12,16 +12,14 @@
 
     a{
         text-decoration: none;
-        font-size: 15px;
     }
-
     h1{
         font-family: impact;
     }
 </style>
 <body>
-    <h1>Contact</h1>
-    <a href="AboutUs.html">About Us</a><br>
-    <a href="HTML_Act.html">Home</a>
+    <h1>ABOUT US</h1>
+    <a href="HTML_Act.html">Home</a><br>
+    <a href="Contact.html">Contact</a>
 </body>
 </html>
