checkbox terms and agreement

--- a/HTML_Act.html
+++ b/HTML_Act.html
@@ -69,6 +69,13 @@
                 <label for="mfgender">Female</label><br>
                 <input type="submit" value="Submit">
             </form>
+
+        <div>
+            <div class="tacbox">
+                <input id="checkbox" type="checkbox" />
+                <label for="checkbox" style="font-size:small"> I agree to these <a href="#">Terms and Conditions</a>.</label>
+              </div>
+        </div>
         </div>
        
         </div>
