--- a/HTML_Act.html
+++ b/HTML_Act.html
@@ -38,18 +38,22 @@
            </nav>
         </div>
         </header>
-        <div class="row-fluid" style="margin-left:330px;">
+        <div class="row-fluid" style="margin-left:500px;">
             <div>
+                <figure>
                 <img src="welcome.jpg" style="width: 700px; height: 200px; margin:5%;" alt="welcome">
+                <figcaption  style="position:relative; left:400px; bottom: 30px;">Welcome</figcaption>
+                </figure>
             </div>
+
             <div>
-                <video width="600px" controls style="position: relative; bottom:40px; left: 100px;">
+                <video width="600px" controls style="position: relative; bottom:5px; left: 160px;">
                     <source src="RIIZE 라이즈 'Love 119' MV.mp4" type="video/ogg">
                 </video>
             </div>
         </div>
         <div>
-            <article style="position: relative; bottom:30px; left:200px">
+            <article style="position: relative; bottom:30px; left:500px">
                 <h2>RIIZE</h2>
                 <p>Riize is a South Korean boy band formed by SM Entertainment.
                     The group consists of seven members:
@@ -63,10 +67,10 @@
                 <label for="lname">Last Name:</label>
                 <input type="text" id="lname" name="lname"><br><br>
                 <p>Gender</p>
-                <input type="radio" id="mgender" name="mgender">
-                <label for="mgender">Male</label><br>
-                <input type="radio" id="mfgender" name="mfgender">
-                <label for="mfgender">Female</label><br>
+                <input type="radio" id="gender" name="gender">
+                <label for="gender">Male</label><br>
+                <input type="radio" id="gender" name="gender">
+                <label for="gender">Female</label><br>
                 <input type="submit" value="Submit">
             </form>
 
@@ -98,6 +102,10 @@
     <div>
         <h3>This is Sm Entertainment location</h3>
         <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3163.4521097973698!2d127.04377919999999!3d37.54441070000001!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x357ca46e21c25855%3A0xb969fc2b68758946!2sSM%20ENTERTAINMENT!5e0!3m2!1sen!2sph!4v1706694598237!5m2!1sen!2sph" width="300" height="150" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+    </div>
+
+    <div>
+        <cite></cite>
     </div>
     <footer>
     <audio controls>
