form and validation and refinement

--- a/Home.html
+++ b/Home.html
@@ -46,19 +46,19 @@
                 </figure>
             </div>
 
-            <div class="row-fluid">
+            <div>
                 <video width="600px" controls style="position: relative; bottom:5px; left: 160px;">
                     <source src="RIIZE 라이즈 'Love 119' MV.mp4" type="video/ogg">
                 </video>
 
-                <img src="starrynight.jpg"  width="550" height="330" alt="The Starry Night" style="position:relative; right:1050px; top:10px; position: flex;">
-                <p style="position: relative;right: 300px;"><cite>The Starry Night</cite>by Vincent Van Gogh</p>
+                <img src="starrynight.jpg"  width="400" height="250" alt="The Starry Night">
+                <p><cite>The Starry Night</cite>by Vincent Van Gogh</p>
             </div>
         </div>
         <div>
-            <article style="position: relative; bottom:30px; left:650px">
+            <article style="position: relative; bottom:30px; left:500px">
                 <h2>RIIZE</h2>
-                <p style="text-align:left;">Riize is a South Korean boy band formed by SM Entertainment.<br>
+                <p>Riize is a South Korean boy band formed by SM Entertainment.
                     The group consists of seven members:
                     Shotaro, Eunseok, Sungchan, Wonbin, Seunghan, Sohee, and Anton.<br>Check out their latest single "Love 119" above.</p>
             </article>
