--- a/HTML_Act.html
+++ b/HTML_Act.html
@@ -23,6 +23,9 @@
         img{
             mix-blend-mode: multiply;
         }
+        html {
+        overflow-x: hidden;
+        }
 
     </style>
 </head>
@@ -30,7 +33,7 @@
     
     <div class="container">
         <header>
-        <div class="row" style="text-indent:75%; font-size:30px; padding:15px; text-decoration:none;font-family:impact; word-spacing:30px;">
+        <div class="row" style="text-indent:75%; font-size:30px; padding:5px; text-decoration:none;font-family:impact; word-spacing:30px;">
            <nav>
             <a href="Home.html">Home</a>
             <a href="AboutUs.html">AboutUs</a>
@@ -38,25 +41,25 @@
            </nav>
         </div>
         </header>
-        <div class="row-fluid" style="margin-left:500px;">
+        <div class="row" style="margin-left:100px;">
             <div>
                 <figure>
-                <img src="welcome.jpg" style="width: 700px; height: 200px; margin:5%;" alt="welcome">
-                <figcaption  style="position:relative; left:400px; bottom: 30px;">Welcome</figcaption>
+                <img src="welcome.jpg" style="width: 700px; height:200px; margin-left:20%;" alt="welcome">
+                <i><figcaption  style="margin-left:43%; font-family:cursive; font-size: 20px;">Welcome</figcaption></i>
                 </figure>
             </div>
 
-            <div class="row-fluid">
-                <video width="600px" controls style="position: relative; bottom:5px; left: 160px;">
+            <div class="row">
+                <video width="600px" controls style="margin-left:25%">
                     <source src="RIIZE 라이즈 'Love 119' MV.mp4" type="video/ogg">
                 </video>
 
-                <img src="starrynight.jpg"  width="550" height="330" alt="The Starry Night" style="position:relative; right:1050px; top:10px; position: flex;">
-                <p style="position: relative;right: 300px;"><cite>The Starry Night</cite>by Vincent Van Gogh</p>
+                <img src="starrynight.jpg"  width="550" height="330" alt="The Starry Night" style="position:relative; right:300px; top:10px; position: flex;">
+                <p style="position: relative;right: 200px;"><cite>The Starry Night</cite>by Vincent Van Gogh</p>
             </div>
         </div>
         <div>
-            <article style="position: relative; bottom:30px; left:650px">
+            <article style="position: relative; bottom:30px; left:200px">
                 <h2>RIIZE</h2>
                 <p style="text-align:left;">Riize is a South Korean boy band formed by SM Entertainment.<br>
                     The group consists of seven members:
@@ -89,7 +92,7 @@
        
         </div>
     <div>
-        <div class="row-flex" style="margin-left:25%; position:relative; bottom:350px; right:475px">
+        <div class="row-flex" style="margin-left:25%; position:relative; bottom:350px; right:350px">
             <table style="width:30%">
                 <tr>
                   <th>Name</th>
