--- a/HTML_Act.html
+++ b/HTML_Act.html
@@ -53,17 +53,19 @@
                 <video width="600px" controls style="margin-left:25%">
                     <source src="RIIZE 라이즈 'Love 119' MV.mp4" type="video/ogg">
                 </video>
-
-                <img src="starrynight.jpg"  width="550" height="330" alt="The Starry Night" style="position:relative; right:300px; top:10px; position: flex;">
-                <p style="position: relative;right: 200px;"><cite>The Starry Night</cite>by Vincent Van Gogh</p>
+            </div>
+            <div>
+                <img src="starrynight.jpg"  width="400" height="200" alt="The Starry Night" style="margin-left:70%; position: relative; bottom:250px; ">
+                <p style="margin-left: 70%; position: relative; bottom:250px; text-align: center;"><cite>The Starry Night</cite>by Vincent Van Gogh</p>
             </div>
         </div>
         <div>
-            <article style="position: relative; bottom:30px; left:200px">
-                <h2>RIIZE</h2>
-                <p style="text-align:left;">Riize is a South Korean boy band formed by SM Entertainment.<br>
+            <article style="margin-left:30%; position:relative; bottom:230px ;">
+                <h2 style="text-align:200px;">RIIZE</h2>
+                <p style="text-align:center; width: 600px;">
+                    Riize is a South Korean boy band formed by SM Entertainment.
                     The group consists of seven members:
-                    Shotaro, Eunseok, Sungchan, Wonbin, Seunghan, Sohee, and Anton.<br>Check out their latest single "Love 119" above.</p>
+                    Shotaro, Eunseok, Sungchan, Wonbin, Seunghan, Sohee, and Anton.Check out their latest single "Love 119" above.</p>
             </article>
         </div>
         <div style="margin-top:10%; font-size:20px;">
