--- a/timemgmt.html
+++ b/timemgmt.html
@@ -6,8 +6,11 @@
     <title>Time Management</title>
 </head>
 <body>
-   <b><h2>10 Tips for Effective Time Management</h2></b>
+   <b><h1>10 Tips for Effective Time Management</h1></b>
+   <h2>Introduction</h2>
+   <h3>Effective time management is crucial for productivity and achieving your goals. Here are 10 tips to help you make the most of your time.</h3><br>
 
-   <h3>Introduction</h3>
+   <h3><b>1. Set Clear Goals</b></h3>
+   <p><li>Define your short-term and </li></p>
 </body>
 </html>
