--- a/timemgmt.html
+++ b/timemgmt.html
@@ -10,7 +10,10 @@
    <h2>Introduction</h2>
    <h3>Effective time management is crucial for productivity and achieving your goals. Here are 10 tips to help you make the most of your time.</h3><br>
 
-   <h3><b>1. Set Clear Goals</b></h3>
-   <p><li>Define your short-term and </li></p>
+   <h3><i>1. Set Clear Goals</i></h3>
+   <p><li>Define your short-term and long-term goals. Having a clear direction will guide your tasks and help prioritize your time.</li></p>
+
+   <h3><i>Prioritize Tasks</i></h3>
+   <p><li></li></p>
 </body>
 </html>
