--- a/timemgmt.html
+++ b/timemgmt.html
@@ -14,6 +14,6 @@
    <p><li>Define your short-term and long-term goals. Having a clear direction will guide your tasks and help prioritize your time.</li></p>
 
    <h3><i>Prioritize Tasks</i></h3>
-   <p><li></li></p>
+   <p><li>Not all tasks are equal. Identify the most important ones and focus on completing them first. This ensures that you address high-priority items promptly.</li></p>
 </body>
 </html>
