--- a/timemgmt.html
+++ b/timemgmt.html
@@ -13,7 +13,10 @@
    <h3><i>1. Set Clear Goals</i></h3>
    <p><li>Define your short-term and long-term goals. Having a clear direction will guide your tasks and help prioritize your time.</li></p>
 
-   <h3><i>Prioritize Tasks</i></h3>
+   <h3><i>2. Prioritize Tasks</i></h3>
    <p><li>Not all tasks are equal. Identify the most important ones and focus on completing them first. This ensures that you address high-priority items promptly.</li></p>
+
+   <h3><i>Create a To-Do List</i></h3>
+   <p><li>List your tasks for the day, week, or month. A to-do list provides a visual overview and helps you stay organized and on track. </li></p>
 </body>
 </html>
