--- a/timemgmt.html
+++ b/timemgmt.html
@@ -16,7 +16,13 @@
    <h3><i>2. Prioritize Tasks</i></h3>
    <p><li>Not all tasks are equal. Identify the most important ones and focus on completing them first. This ensures that you address high-priority items promptly.</li></p>
 
-   <h3><i>Create a To-Do List</i></h3>
+   <h3><i>3. Create a To-Do List</i></h3>
    <p><li>List your tasks for the day, week, or month. A to-do list provides a visual overview and helps you stay organized and on track. </li></p>
+
+   <h3><i>4. Use Time Blocks</i></h3>
+   <p><li>Divide your day into time blocks and assign specific tasks to each block. This helps maintain focus and prevents multitasking.</li></p>
+
+   <h3><i>5. Eliminate Distractions</i></h3>
+   <p><li>Identify and minimize</li></p>
 </body>
 </html>
