--- a/timemgmt.html
+++ b/timemgmt.html
@@ -23,6 +23,8 @@
    <p><li>Divide your day into time blocks and assign specific tasks to each block. This helps maintain focus and prevents multitasking.</li></p>
 
    <h3><i>5. Eliminate Distractions</i></h3>
-   <p><li>Identify and minimize</li></p>
+   <p><li>Identify and minimize distractions in your workspace. Turn off notifications and create a conducive environment for concentration.</li></p>
+
+   
 </body>
 </html>
