--- a/timemgmt.html
+++ b/timemgmt.html
@@ -25,6 +25,7 @@
    <h3><i>5. Eliminate Distractions</i></h3>
    <p><li>Identify and minimize distractions in your workspace. Turn off notifications and create a conducive environment for concentration.</li></p>
 
-   
+   <h3><i>6. Learn to Delegate</i></h3>
+   <p><li></li></p>
 </body>
 </html>
