--- a/timemgmt.html
+++ b/timemgmt.html
@@ -26,6 +26,6 @@
    <p><li>Identify and minimize distractions in your workspace. Turn off notifications and create a conducive environment for concentration.</li></p>
 
    <h3><i>6. Learn to Delegate</i></h3>
-   <p><li></li></p>
+   <p><li>Don't hesitate to delegate tasks when possible. This frees up your time for more critical responsibilities.</li></p>
 </body>
 </html>
