--- a/timemgmt.html
+++ b/timemgmt.html
@@ -27,5 +27,8 @@
 
    <h3><i>6. Learn to Delegate</i></h3>
    <p><li>Don't hesitate to delegate tasks when possible. This frees up your time for more critical responsibilities.</li></p>
+
+   <h3><i>7. Take Breaks</i></h3>
+   <p><li>Regular breaks prevent burnout and improve overall productivity. Schedule short breaks to recharge your mind.</li></p>
 </body>
 </html>
