--- a/timemgmt.html
+++ b/timemgmt.html
@@ -30,5 +30,8 @@
 
    <h3><i>7. Take Breaks</i></h3>
    <p><li>Regular breaks prevent burnout and improve overall productivity. Schedule short breaks to recharge your mind.</li></p>
+
+   <h3><i>8. Set Deadlines</i></h3>
+   <p><li>Assign deadlines to your tasks to create a sense of urgency. This encourages timely completion and avoids procrastination.</li></p>
 </body>
 </html>
