--- a/timemgmt.html
+++ b/timemgmt.html
@@ -33,5 +33,8 @@
 
    <h3><i>8. Set Deadlines</i></h3>
    <p><li>Assign deadlines to your tasks to create a sense of urgency. This encourages timely completion and avoids procrastination.</li></p>
+
+   <h3><i>9. Learn to Say No</i></h3>
+   <p><li>It's essential </li></p>
 </body>
 </html>
