--- a/timemgmt.html
+++ b/timemgmt.html
@@ -35,6 +35,8 @@
    <p><li>Assign deadlines to your tasks to create a sense of urgency. This encourages timely completion and avoids procrastination.</li></p>
 
    <h3><i>9. Learn to Say No</i></h3>
-   <p><li>It's essential </li></p>
+   <p><li>It's essential to recognize your limits. Politely decline additional tasks when your schedule is already full to avoid overcomitting.</li></p>
+
+   
 </body>
 </html>
