--- a/timemgmt.html
+++ b/timemgmt.html
@@ -37,6 +37,9 @@
    <h3><i>9. Learn to Say No</i></h3>
    <p><li>It's essential to recognize your limits. Politely decline additional tasks when your schedule is already full to avoid overcomitting.</li></p>
 
-   
+   <h3><i>10. Reflect and Adjust</i></h3>
+   <p><li>Regularly assess your time management strategies. If certain methods aren't working, be open to adjusting your approach for better results.</li></p>
+
+   <h3></h3>
 </body>
 </html>
