--- a/timemgmt.html
+++ b/timemgmt.html
@@ -40,6 +40,7 @@
    <h3><i>10. Reflect and Adjust</i></h3>
    <p><li>Regularly assess your time management strategies. If certain methods aren't working, be open to adjusting your approach for better results.</li></p>
 
-   <h3></h3>
+   <h3>Conclusion</h3>
+   <p>Effective time management is a skill that can be developed over time. By implementing these tips, you'll be on your way to a more organized and productive lifestyle.</p>
 </body>
 </html>
