--- a/ai.html
+++ b/ai.html
@@ -6,6 +6,8 @@
     <title>AI</title>
 </head>
 <body>
-    <h1>The Impact of </h1>
+    <h1>The Impact of Artificial Intelligence on the future of Work</h1>
+    <h3>Introduction</h3>
+    <p>In the ever-evolving</p>
 </body>
 </html>
