--- a/ai.html
+++ b/ai.html
@@ -8,6 +8,8 @@
 <body>
     <h1>The Impact of Artificial Intelligence on the future of Work</h1>
     <h3>Introduction</h3>
-    <p>In the ever-evolving</p>
+    <p>In the ever-evolving landscape of technology, the rise of Artificial Intelligence (AI) is reshaping the way we wrork. From automation to advanced data analysis, AI has profound implications for the future of employment.</p>
+    <p><b>Automation and Job Displacement </b></p>
+
 </body>
 </html>
