--- a/ai.html
+++ b/ai.html
@@ -10,6 +10,6 @@
     <h3>Introduction</h3>
     <p>In the ever-evolving landscape of technology, the rise of Artificial Intelligence (AI) is reshaping the way we wrork. From automation to advanced data analysis, AI has profound implications for the future of employment.</p>
     <p><b>Automation and Job Displacement </b></p>
-
+    <p>One of the most discussed aspects of AI is its role in automation. As machines become more sophisticated, routine tasks are increasingly </p>
 </body>
 </html>
