--- a/HTML_Act.html
+++ b/HTML_Act.html
@@ -41,7 +41,7 @@
     </style>
 </head>
 <body>
-    <div class="container">
+    <div class="container" col-md-2>
         <header>
         <div class="row" style="text-indent:75%; font-size:30px; padding:5px; text-decoration:none;font-family:impact; word-spacing:30px;">
            <nav>
@@ -65,7 +65,7 @@
                 </video>
             </div>
             
-            <div>
+            <div class="container">
                 <img src="starrynight.jpg"  width="400px" height="200px" alt="The Starry Night" style="margin-left:70%; position: relative; bottom:250px; ">
                 <p style="margin-left: 70%; position: relative; bottom:250px; text-align: center;"><cite>The Starry Night</cite>by Vincent Van Gogh</p>
             </div>
