--- a/HTML_Act.html
+++ b/HTML_Act.html
@@ -62,6 +62,23 @@
             position: relative;
             bottom: 200px;
         }
+        .audio{
+            width: 400px; 
+            margin-left:30%;
+             position: relative;
+             bottom:250px; 
+             left: 630px;
+        }
+        .cite{
+            margin-left:70%;
+            position: relative;
+            bottom:250px;
+        }
+        #cite-p{
+            margin-left: 6%; 
+            position: relative; 
+            text-align: center;
+        }
     </style>
 </head>
 <body>
@@ -91,11 +108,11 @@
             </div>
             
             <div class="cite">
-                <img src="starrynight.jpg"  width="400px" height="200px" alt="The Starry Night" style="margin-left:70%; position: relative; bottom:250px; ">
-                <p style="margin-left: 70%; position: relative; bottom:250px; text-align: center;"><cite>The Starry Night</cite>by Vincent Van Gogh</p>
+                <img src="starrynight.jpg"  width="400px" height="200px" alt="The Starry Night">
+                <p id="cite-p"><cite>The Starry Night</cite>by Vincent Van Gogh</p>
             </div>
             <div class="audio">
-                <audio controls style="width: 300px; margin-left:30%; position: relative;bottom:250px; left: 630px;">
+                <audio controls>
                     <source src="RIIZE 라이즈 'Love 119' MV.mp3"  type="audio/mpeg">
                 </audio>
             </div>
