--- a/ai.html
+++ b/ai.html
@@ -12,7 +12,7 @@
     <p><b>Automation and Job Displacement </b></p>
     <p>One of the most discussed aspects of AI is its role in automation. As machines become more sophisticated, routine tasks are increasingly performed by AI systems, leading to concerns about job displacement. According to a  <a href="https://seo.ai/blog/ai-replacing-jobs-statistics#:~:text=Actual%20Impact%20of%20AI,trillion%20by%20the%20same%20year.">study</a>, automation is expected to affect various industries, with both positive and negative consequences.</p>
     <p><b>Upskilling and Reskilling</b></p>
-    <p>While automation may lead to job displacement in certain sectors, there is a growing emphasis on upskilling and reskilling </p>
+    <p>While automation may lead to job displacement in certain sectors, there is a growing emphasis on upskilling and reskilling the workforce. Organizations are investing in programs to train employees in new skills, preparing them for the jobs of the future that require a combination of technical and soft skills.</p>
     
 </body>
 </html>
