--- a/ai.html
+++ b/ai.html
@@ -13,6 +13,8 @@
     <p>One of the most discussed aspects of AI is its role in automation. As machines become more sophisticated, routine tasks are increasingly performed by AI systems, leading to concerns about job displacement. According to a  <a href="https://seo.ai/blog/ai-replacing-jobs-statistics#:~:text=Actual%20Impact%20of%20AI,trillion%20by%20the%20same%20year.">study</a>, automation is expected to affect various industries, with both positive and negative consequences.</p>
     <p><b>Upskilling and Reskilling</b></p>
     <p>While automation may lead to job displacement in certain sectors, there is a growing emphasis on upskilling and reskilling the workforce. Organizations are investing in programs to train employees in new skills, preparing them for the jobs of the future that require a combination of technical and soft skills.</p>
+    <p><b>AI Collaboration in the Workplace</b></p>
+    <p>Rather than replacing human workers, AI is often viewed as a collaborative tool. For example, in customer service, AI chatbots can handle routine queries, allowing human employees to focus on more complex </p>
     
 </body>
 </html>
