--- a/ai.html
+++ b/ai.html
@@ -14,7 +14,11 @@
     <p><b>Upskilling and Reskilling</b></p>
     <p>While automation may lead to job displacement in certain sectors, there is a growing emphasis on upskilling and reskilling the workforce. Organizations are investing in programs to train employees in new skills, preparing them for the jobs of the future that require a combination of technical and soft skills.</p>
     <p><b>AI Collaboration in the Workplace</b></p>
-    <p>Rather than replacing human workers, AI is often viewed as a collaborative tool. For example, in customer service, AI chatbots can handle routine queries, allowing human employees to focus on more complex </p>
+    <p>Rather than replacing human workers, AI is often viewed as a collaborative tool. For example, in customer service, AI chatbots can handle routine queries, allowing human employees to focus on more complex issues that require empathy and problem-solving skills.</p>
+    <p><b>AI Collaboration </b></p>
+    <p><img src="AI.jpeg" width="200px" height="130" alt=""></p>
+    <p><b>Ethical Considerations</b></p>
+    <p>As AI</p>
     
 </body>
 </html>
