--- a/ai.html
+++ b/ai.html
@@ -18,7 +18,7 @@
     <p><b>AI Collaboration </b></p>
     <p><img src="AI.jpeg" width="200px" height="130" alt=""></p>
     <p><b>Ethical Considerations</b></p>
-    <p>As AI becomes </p>
+    <p>As AI becomes more integrated </p>
     
 </body>
 </html>
