--- a/ai.html
+++ b/ai.html
@@ -18,7 +18,7 @@
     <p><b>AI Collaboration </b></p>
     <p><img src="AI.jpeg" width="200px" height="130" alt=""></p>
     <p><b>Ethical Considerations</b></p>
-    <p>As AI becomes more integrated into the workplace, ethical considerations arise. Issues </p>
+    <p>As AI becomes more integrated into the workplace, ethical considerations arise. Issues such as bias in AI algorithms and the  </p>
     
 </body>
 </html>
