--- a/ai.html
+++ b/ai.html
@@ -20,7 +20,7 @@
     <p><b>Ethical Considerations</b></p>
     <p>As AI becomes more integrated into the workplace, ethical considerations arise. Issues such as bias in AI algorithms and the and the ethical use of AI in decision-making processes need careful examination. Companies are urged to adopt ethical AI practices to ensure fair and responsible implementation. </p>
     <p><b>The Evolution of Job Roles</b></p>
-    <p>The Introduction of AI</p>
+    <p>The Introduction of AI is leading to the evolution of job roles.</p>
     
 </body>
 </html>
