--- a/ai.html
+++ b/ai.html
@@ -23,7 +23,7 @@
     <p>The Introduction of AI is leading to the evolution of job roles. New positions are emerging, such as AI trainers, ethicists, and AI system maintenance specialists. The workforce of the future will require individuals with a diverse set of skills to navigate the AI-driven landscape.</p>
     &nbsp;
     <h3>Conclusion</h3>
-    <p>The impact of AI on the future of work is multifaceted. While automation raises concerns about job displacement, proactive measures like upskilling and ethical cnsiderations can help harness the potential of AI for the betterment of society. As we embrace this </p>
+    <p>The impact of AI on the future of work is multifaceted. While automation raises concerns about job displacement, proactive measures like upskilling and ethical cnsiderations can help harness the potential of AI for the betterment of society. As we embrace this technological revolution, it is crucial to strike a balance between efficiency and human-centric values in the workplace. </p>
     
 </body>
 </html>
