--- a/HTML_Act.html
+++ b/HTML_Act.html
@@ -151,6 +151,7 @@
                 <label for="gender">Male</label><br>
                 <input type="radio" id="gender" name="gender">
                 <label for="gender">Female</label><br><br>
+                <input type="reset" value="Reset">
                 <input type="submit" value="Submit">
             </form>
                 <input id="checkbox" type="checkbox" />
