--- a/HTML_Act.html
+++ b/HTML_Act.html
@@ -80,6 +80,10 @@
             position: relative; 
             text-align: center;
         }
+        .boot-js{
+            font-size:2rem;
+            font-family:Georgia;
+        }
     </style>
 </head>
 <body>
