--- a/Home.html
+++ b/Home.html
@@ -37,7 +37,7 @@
         <header>
         <div class="row" style="text-indent:75%; font-size:30px; padding:5px; text-decoration:none;font-family:impact; word-spacing:30px;">
            <nav>
-            <a href="Home.html">Home</a>
+            <a href="HTML_Act.html">Home</a>
             <a href="AboutUs.html">AboutUs</a>
             <a href="Contact.html">Contact</a>
            </nav>
