--- a/AboutUs.html
+++ b/AboutUs.html
@@ -4,6 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="AboutUs.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.4.1/dist/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+
 </head>
 <style>
     body{
@@ -19,8 +22,17 @@
     }
 </style>
 <body>
-    <h1>ABOUT US</h1>
-    <a href="HTML_Act.html">Home</a><br>
-    <a href="Contact.html">Contact</a>
+    <div class="navigate">
+       <nav>
+        <a href="HTML_Act.html">Home</a>
+        <a href="AboutUs.html">AboutUs</a>
+        <a href="Contact.html">Contact</a>
+       </nav>
+    </div>
+    
+    <div class="container-sm">
+        <img src="" alt="">
+        <p>Email: rusbravo27@gmail.com</p>
+    </div>
 </body>
 </html>
