--- a/Contact.html
+++ b/Contact.html
@@ -4,6 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Contact</title>
+    <link rel="stylesheet" href="AboutUs.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.4.1/dist/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+
 </head>
 <style>
     body{
@@ -12,16 +15,19 @@
 
     a{
         text-decoration: none;
-        font-size: 15px;
     }
-
     h1{
         font-family: impact;
+        text-align: center;
     }
 </style>
 <body>
-    <h1>Contact</h1>
-    <a href="AboutUs.html">About Us</a><br>
-    <a href="HTML_Act.html">Home</a>
+    <div class="navigate">
+       <nav>
+        <a href="HTML_Act.html">Home</a>
+        <a href="AboutUs.html">AboutUs</a>
+        <a href="Contact.html">Contact</a>
+       </nav>
+    </div>
 </body>
 </html>
