--- a/css1.html
+++ b/css1.html
@@ -19,7 +19,8 @@
     <p>
         <a style="color:green; text-decoration: underline;" href="https://google.com"></a>
     </p>
-    <iframe style="width:600px; height:400px;" src="" frameborder="0"></iframe>
+    <iframe style="width:600px; height:400px;" src="bear.jpg" frameborder="0"></iframe>
+    <iframe width="560" height="315" src="https://www.youtube.com/embed/gyBscA3UBzY?si=s2neq6H7znrf0K-B" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
 
 </body>
 </html>
