--- a/css2.html
+++ b/css2.html
@@ -6,15 +6,53 @@
     <title>Classes</title>
 </head>
 <body>
-    <style>
-
+    <style type="text/css">
+        .background{
+            background: lightgrey;
+        }
+        .head{
+            background: transparent;
+        }
+        .eyeball{
+            background: transparent;
+            border-color: transparent;
+        }
+        .beak{
+            color: green;
+        }
+        .body{
+            background-image:url(profile.jpg);
+        }
+        .wing{
+            color: blueviolet;
+        }
+        .drumstick{
+            color: brown;
+        }
+        .drumstick-right{
+            color: aquamarine;
+        }
     </style>
     <div class="canvas background">
         <div class="air background"></div>
         <div class="head">
             <div class="eyeball">
-                <span .pupil></span>
+                <span class="pupil">&middot;</span>
             </div>
+            <div class="beak">&gt;</div>
+        </div>
+    </div>
+    <div class="body">
+        <div class="wing">
+            <strong>&lt;</strong>
+        </div>
+    </div>
+    <div class="drumsticks">
+        <div class="drumsticks">
+            <br>
+        </div>
+        <div class="drumstick drumstick-right">
+            <br>
         </div>
     </div>
 </body>
