--- a/HTML_Act.html
+++ b/HTML_Act.html
@@ -89,13 +89,13 @@
                 </div>
             </div>
             <div class="col-md-3 image_col" >
-                    <img src="starrynight.jpg"  width="330px" height="200px" margin-right="5%" alt="The Starry Night">
-                    <p id="cite"><cite>The Starry Night</cite>by Vincent Van Gogh</p>
-                    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3163.4521097973698!2d127.04377919999999!3d37.54441070000001!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x357ca46e21c25855%3A0xb969fc2b68758946!2sSM%20ENTERTAINMENT!5e0!3m2!1sen!2sph!4v1706694598237!5m2!1sen!2sph" width="300" height="150" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
-                    <p>This is <abbr title="Star Museum">SM</abbr> Entertainment location</p>
-                    <audio controls><source src="RIIZE 라이즈 'Love 119' MV.mp3"></audio>
-                     
-
+                    <section>
+                        <img src="starrynight.jpg"  width="330px" height="200px" margin-right="5%" alt="The Starry Night">
+                        <p id="cite"><cite>The Starry Night</cite>by Vincent Van Gogh</p>
+                        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3163.4521097973698!2d127.04377919999999!3d37.54441070000001!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x357ca46e21c25855%3A0xb969fc2b68758946!2sSM%20ENTERTAINMENT!5e0!3m2!1sen!2sph!4v1706694598237!5m2!1sen!2sph" width="300" height="150" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+                        <p>This is <abbr title="Star Museum">SM</abbr> Entertainment location</p>
+                        <audio controls><source src="RIIZE 라이즈 'Love 119' MV.mp3"></audio>
+                    </section>
             </div>
             </div> 
         </div>
