Tribute Page Final

--- a/Bravo_portfoliotemplate/TributePage/index.html
+++ b/Bravo_portfoliotemplate/TributePage/index.html
@@ -24,7 +24,7 @@
       <div></div>
       <div class="container">
         <div class="row">
-          <div class="col-md-4 image">
+          <div class="col-lg-4 image">
             <img src="racquel.jpg" class="img-fluid" alt="Racquel Bravo">
             <p class="facts">Racquel S. Bravo. Born in April 29, 1981 in Baguio City, Philippines</p>
           </div>
