Technical Documentation Page

--- a/Bravo_portfoliotemplate/Technical Documentation Page/index.html
+++ b/Bravo_portfoliotemplate/Technical Documentation Page/index.html
@@ -139,8 +139,7 @@
         <article>
           To get started with writing JavaScript, open the Scratchpad and write
           your first "Hello world" JavaScript code:
-          <code
-            >function greetMe(yourName) { alert("Hello " + yourName); }
+          <code class="code">function greetMe(yourName) { alert("Hello " + yourName); }
             greetMe("World");
           </code>
 
@@ -150,18 +149,18 @@
       </section>
       <section class="main-section" id="Variables">
         <header>Variables</header>
-        <p>
+        <p  class="variable">
           You use variables as symbolic names for values in your application.
           The names of variables, called identifiers, conform to certain rules.
         </p>
-        <p>
+        <p  class="variable">
           A JavaScript identifier must start with a letter, underscore (_), or
           dollar sign ($); subsequent characters can also be digits (0-9).
           Because JavaScript is case sensitive, letters include the characters
           "A" through "Z" (uppercase) and the characters "a" through "z"
           (lowercase).
         </p>
-        <p>
+        <p  class="variable">
           You can use ISO 8859-1 or Unicode letters such as å and ü in
           identifiers. You can also use the Unicode escape sequences as
           characters in identifiers. Some examples of legal names are
@@ -178,7 +177,7 @@
           </p>
           <p>
             By simply assigning it a value. For example,
-            <code>x = 42.</code> This always declares a global variable. It
+            <code class="code">x = 42.</code> This always declares a global variable. It
             generates a strict JavaScript warning. You shouldn't use this
             variant.
           </p>
@@ -208,7 +207,7 @@
             function (or global context) within which x is declared, not the
             block, which in this case is an if statement.
           </p>
-          <code>if (true) { var x = 5; } console.log(x); // 5</code>
+          <code class="code">if (true) { var x = 5; } console.log(x); // 5</code>
           <p>
             This behavior changes, when using the let declaration introduced in
             ECMAScript 2015.
@@ -248,7 +247,7 @@
             and can contain alphabetic, numeric, or underscore characters.
           </p>
 
-          <code>const PI = 3.14;</code>
+          <code class="code">const PI = 3.14;</code>
           <p>
             A constant cannot change value through assignment or be re-declared
             while the script is running. It has to be initialized to a value.
@@ -272,7 +271,7 @@
           >
           However, object attributes are not protected, so the following
           statement is executed without problems.
-          <code
+          <code class="code"
             >const MY_OBJECT = {"key": "value"}; MY_OBJECT.key =
             "otherValue";</code
           >
@@ -320,7 +319,7 @@
           true. Use the optional else clause to execute a statement if the
           condition is false. An if statement looks as follows:
 
-          <code>if (condition) { statement_1; } else { statement_2; }</code>
+          <code class="code">if (condition) { statement_1; } else { statement_2; }</code>
           condition can be any expression that evaluates to true or false. See
           Boolean for an explanation of what evaluates to true and false. If
           condition evaluates to true, statement_1 is executed; otherwise,
@@ -330,7 +329,7 @@
             You may also compound the statements using else if to have multiple
             conditions tested in sequence, as follows:
           </p>
-          <code
+          <code class="code"
             >if (condition_1) { statement_1; } else if (condition_2) {
             statement_2; } else if (condition_n) { statement_n; } else {
             statement_last; }
@@ -341,7 +340,7 @@
           general, it's good practice to always use block statements, especially
           when nesting if statements:
 
-          <code
+          <code class="code"
             >if (condition) { statement_1_runs_if_condition_is_true;
             statement_2_runs_if_condition_is_true; } else {
             statement_3_runs_if_condition_is_false;
@@ -350,11 +349,11 @@
           It is advisable to not use simple assignments in a conditional
           expression, because the assignment can be confused with equality when
           glancing over the code. For example, do not use the following code:
-          <code>if (x = y) { /* statements here */ }</code> If you need to use
+          <code class="code">if (x = y) { /* statements here */ }</code> If you need to use
           an assignment in a conditional expression, a common practice is to put
           additional parentheses around the assignment. For example:
 
-          <code>if ((x = y)) { /* statements here */ }</code>
+          <code class="code">if ((x = y)) { /* statements here */ }</code>
         </article>
       </section>
       <section class="main-section" id="while_statement">
@@ -363,7 +362,7 @@
           A while statement executes its statements as long as a specified
           condition evaluates to true. A while statement looks as follows:
 
-          <code>while (condition) statement</code> If the condition becomes
+          <code class="code">while (condition) statement</code> If the condition becomes
           false, statement within the loop stops executing and control passes to
           the statement following the loop.
 
@@ -385,7 +384,7 @@
             The following while loop iterates as long as n is less than three:
           </p>
 
-          <code>var n = 0; var x = 0; while (n &lt; 3) { n++; x += n; }</code>
+          <code class="code">var n = 0; var x = 0; while (n &lt; 3) { n++; x += n; }</code>
           <p>
             With each iteration, the loop increments n and adds that value to x.
             Therefore, x and n take on the following values:
@@ -424,14 +423,14 @@
             square:
           </p>
 
-          <code>function square(number) { return number * number; }</code>
+          <code class="code">function square(number) { return number * number; }</code>
           <p>
             The function square takes one argument, called number. The function
             consists of one statement that says to return the argument of the
             function (that is, number) multiplied by itself. The return
             statement specifies the value returned by the function.
           </p>
-          <code>return number * number;</code>
+          <code class="code">return number * number;</code>
           <p>
             Primitive parameters (such as a number) are passed to functions by
             value; the value is passed to the function, but if the function
