Product Landing Page

--- a/Bravo_portfoliotemplate/Technical Documentation Page/index.html
+++ b/Bravo_portfoliotemplate/Technical Documentation Page/index.html
@@ -264,7 +264,7 @@
             variable in the same scope. For example:
           </p>
 
-          <code
+          <code style="color: green;"
             >// THIS WILL CAUSE AN ERROR function f() {}; const f = 5; // THIS
             WILL CAUSE AN ERROR ALSO function f() { const g = 5; var g;
             //statements }</code
