--- a/Bravo_portfoliotemplate/Product Landing Page/index.html
+++ b/Bravo_portfoliotemplate/Product Landing Page/index.html
@@ -16,16 +16,16 @@
         <div class="logo">
           <img
             id="header-img"
-            src="https://cdn.freecodecamp.org/testable-projects-fcc/images/product-landing-page-logo.png"
+            src=nct_logo.jpg
             alt="original trombones logo"
           />
         </div>
 
         <nav id="nav-bar">
           <ul>
-            <li><a class="nav-link" href="#features">Features</a></li>
-            <li><a class="nav-link" href="#how-it-works">How It Works</a></li>
-            <li><a class="nav-link" href="#pricing">Pricing</a></li>
+            <li><a class="nav-link" href="#features">Introduction</a></li>
+            <li><a class="nav-link" href="#how-it-works">Music Video</a></li>
+            <li><a class="nav-link" href="#pricing">Unit</a></li>
           </ul>
         </nav>
       </header>
