--- a/Bravo_portfoliotemplate/Product Landing Page/index.html
+++ b/Bravo_portfoliotemplate/Product Landing Page/index.html
@@ -8,6 +8,7 @@
       href="https://use.fontawesome.com/releases/v5.8.1/css/all.css"
       integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf"
       crossorigin="anonymous"
+      
     />
   </head>
   <body>
@@ -25,7 +26,7 @@
           <ul>
             <li><a class="nav-link" href="#features">Introduction</a></li>
             <li><a class="nav-link" href="#how-it-works">Music Video</a></li>
-            <li><a class="nav-link" href="#pricing">Unit</a></li>
+            <li><a class="nav-link" href="#pricing">Achievements</a></li>
           </ul>
         </nav>
       </header>
@@ -33,7 +34,8 @@
       <div class="container"></div>
 
       <section id="hero">
-        <h2>Handcrafted, home-made masterpieces</h2>
+        <br>
+        <h2>Welcome to NeoCity</h2>
         <form id="form" action="https://www.freecodecamp.com/email-submit">
           <input
             name="email"
@@ -42,89 +44,94 @@
             placeholder="Enter your email address"
             required
           />
-          <input id="submit" type="submit" value="Get Started" class="btn" />
+          <input id="submit" type="submit" value="Let's Kaja" class="btn" />
         </form>
       </section>
 
       <div class="container">
         <section id="features">
           <div class="grid">
-            <div class="icon"><i class="fa fa-3x fa-fire"></i></div>
+            <div class="icon"><img src="127.jpg.png"alt="" width="100"></i></div>
             <div class="desc">
-              <h2>Premium Materials</h2>
+              <h2>NCT 127</h2>
               <p>
-                Our trombones use the shiniest brass which is sourced locally.
-                This will increase the longevity of your purchase.
+                NCT 127 is the first fixed and second overall sub-unit of the South Korean boy band NCT, formed and managed by SM Entertainment. The current lineup consists of nine active members: Taeil, Johnny, 
               </p>
             </div>
           </div>
           <div class="grid">
-            <div class="icon"><i class="fa fa-3x fa-truck"></i></div>
+            <div class="icon"><img src="dream.jpg.png" alt="" width="100"></i></div>
             <div class="desc">
-              <h2>Fast Shipping</h2>
+              <h2>NCT Dream</h2>
               <p>
-                We make sure you recieve your trombone as soon as we have
-                finished making it. We also provide free returns if you are not
-                satisfied.
+                NCT DREAM is NCT's sub-group comprising seven members – MARK, RENJUN, JENO, HAECHAN, JAEMIN, CHENLE and JISUNG. The once “teenage team” now grew up as one of the iconic K-POP boy bands.
               </p>
             </div>
           </div>
           <div class="grid">
-            <div class="icon">
-              <i class="fa fa-3x fa-battery-full" aria-hidden="true"></i>
+            <div class="icon"><img src="wayv.png" alt="" width="100"></i>
             </div>
             <div class="desc">
-              <h2>Quality Assurance</h2>
+              <h2>Wayv</h2>
               <p>
-                For every purchase you make, we will ensure there are no damages
-                or faults and we will check and test the pitch of your
-                instrument.
+                WayV is a six-member boy group formed by SM Entertainment, and the fourth and the Chinese sub-unit of NCT. Originally as seven, they debuted in China on January 17, 2019 with their first digital EP, The Vision.
+              </p>
+            </div>
+          </div>
+          <div class="grid">
+            <div class="icon"><img src="wish,jpg.png" alt="" width="100"></i>
+            </div>
+            <div class="desc">
+              <h2>NCT Wish</h2>
+              <p>
+                NCT Wish is a Japanese boy band and the final sub-unit of the South Korean boy band NCT, formed and managed by SM Entertainment and Avex Trax with SM director and soloist BoA, in charge as the producer.
               </p>
             </div>
           </div>
         </section>
         <section id="how-it-works">
-          <iframe
-            id="video"
-            height="315"
-            src="https://www.youtube-nocookie.com/embed/y8Yv4pnO7qc?rel=0&amp;controls=0&amp;showinfo=0"
-            frameborder="0"
-            allowfullscreen
-          ></iframe>
+          <iframe width="560" height="315" src="https://www.youtube.com/embed/0IpbvXVbBYA?si=Mcm9j_fNlm4r7PdT" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
         </section>
         <section id="pricing">
           <div class="product" id="tenor">
-            <div class="level">Tenor Trombone</div>
-            <h2>$600</h2>
+            <div class="level">2021</div>
+            <h2 class="achievements">Achievements</h2>
             <ol>
-              <li>Lorem ipsum.</li>
-              <li>Lorem ipsum.</li>
-              <li>Lorem ipsum dolor.</li>
-              <li>Lorem ipsum.</li>
+              <li><b>🏆Circle Chart Music Awards🏆</b></li>
+              <li>Top Kit-Seller of the Year</li>
+               <li>World K-Pop Star</li>
+              <li><b>🏆Golden Disc Awards🏆</b></li>
+              <li>Album Bonsang – “NCT 2020 Resonance Pt.1”</li>
+             
             </ol>
             <button class="btn">Select</button>
           </div>
           <div class="product" id="bass">
-            <div class="level">Bass Trombone</div>
-            <h2>$900</h2>
+            <div class="level">2022</div>
+            <h2>Achievements</h2>
             <ol>
-              <li>Lorem ipsum.</li>
-              <li>Lorem ipsum.</li>
-              <li>Lorem ipsum dolor.</li>
-              <li>Lorem ipsum.</li>
+              <li>
+                <b>🏆Golden Disc Awards🏆</b>
+              </li>
+              <li>Album Bonsang – “Sticker”</li>
+              <li><b>🏆Hanteo Music Awards🏆</b></li>
+              <li>Artist of the Year (Bonsang)</li>
+              <li><b>🏆Seoul Music Awards🏆</b></li>
+              <li>Grand Award (Daesang)</li>
             </ol>
             <button class="btn">Select</button>
           </div>
           <div class="product" id="valve">
-            <div class="level">Valve Trombone</div>
-            <h2>$1200</h2>
+            <div class="level">2023</div>
+            <h2>Achievements</h2>
             <ol>
-              <li>Plays similar to a Trumpet</li>
-              <li>Great for Jazz Bands</li>
-              <li>Lorem ipsum dolor.</li>
-              <li>Lorem ipsum.</li>
+              <li><b>🏆Circle Chart Music Awards🏆</b></li>
+              <li>Album of the Year; 1st Quarter – “Universe”</li>
+              <li>Best Kit (Album of the Year)</li>
+              <li><b>🏆Golden Disc Awards🏆</b></li>
+              <li>Album Bonsang – “Universe”</li>
             </ol>
-            <button class="btn">Select</button>
+            <button class="btn" style="color: darkgreen;">Select</button>
           </div>
         </section>
         <footer>
@@ -133,7 +140,7 @@
             <li><a href="#">Terms</a></li>
             <li><a href="#">Contact</a></li>
           </ul>
-          <span>Copyright 2016, Original Trombones</span>
+          <span>Copyright, SM Entertainment</span>
         </footer>
       </div>
     </div>
